--- a/app/css/main.css
+++ b/app/css/main.css
@@ -329,3 +329,186 @@ html, body {
         margin-top: 4px; }
       .header .bgTop .door_panel .door_text2 {
         font-size: 23px; }
+
+.content .slider {
+  margin: 80px 0; }
+  .content .slider .slideshow-container {
+    position: relative; }
+    .content .slider .slideshow-container .text {
+      width: 100%;
+      text-shadow: 0 1px 4px rgba(1, 1, 1, 0.75);
+      color: #ffffff;
+      font-family: "Helvetica Neue";
+      font-size: 72px;
+      font-weight: 400;
+      line-height: 13.53px;
+      position: absolute;
+      top: 50%;
+      text-align: center; }
+    .content .slider .slideshow-container .fade {
+      -webkit-animation-name: fade;
+              animation-name: fade;
+      -webkit-animation-duration: 1.5s;
+              animation-duration: 1.5s; }
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4; }
+  to {
+    opacity: 1; } }
+
+@keyframes fade {
+  from {
+    opacity: .4; }
+  to {
+    opacity: 1; } }
+  .content .slider .dot {
+    cursor: pointer;
+    height: 13px;
+    width: 13px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    -webkit-transition: background-color 0.6s ease;
+    -o-transition: background-color 0.6s ease;
+    transition: background-color 0.6s ease; }
+  .content .slider .active, .content .slider .dot:hover {
+    background-color: #717171; }
+
+.content .title {
+  margin-bottom: 33px;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  color: #608b30;
+  font-family: "Bebas Neue Bold";
+  font-size: 48px;
+  font-weight: 400; }
+
+.content .main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
+  .content .main_sidebar {
+    width: 166px;
+    height: 192px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .content .main_sidebar_item a {
+      color: #006600;
+      font-family: "Helvetica Neue";
+      font-size: 15px;
+      font-weight: 400;
+      text-transform: uppercase; }
+      .content .main_sidebar_item a.active {
+        color: #cc0000; }
+  .content .main_bg {
+    width: 770px;
+    height: 852px;
+    background-image: url(../assets/img/mainText.png);
+    background-size: 770px 852px; }
+    .content .main_bg_text {
+      width: 685px;
+      height: 751px;
+      margin: 40px;
+      color: #333333;
+      font-family: "Helvetica Neue";
+      font-size: 18px;
+      font-weight: 300; }
+      .content .main_bg_text p {
+        margin-top: 20px;
+        margin-left: 15px; }
+  .content .main_banner {
+    width: 170px; }
+    .content .main_banner_1 {
+      text-align: center;
+      margin-bottom: 20px; }
+      .content .main_banner_1_phone {
+        text-shadow: 0 1px 1px rgba(1, 1, 1, 0.5);
+        color: #333333;
+        font-family: "Helvetica Neue";
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 20px; }
+        .content .main_banner_1_phone .big_number {
+          font-weight: 500;
+          font-size: 18px; }
+      .content .main_banner_1_call {
+        width: 100%;
+        height: 66px;
+        -webkit-box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
+                box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
+        background-color: #de3635;
+        background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(176, 39, 39, 0.54)), to(rgba(222, 54, 53, 0.54)));
+        background-image: -o-linear-gradient(bottom, rgba(176, 39, 39, 0.54) 0%, rgba(222, 54, 53, 0.54) 100%);
+        background-image: linear-gradient(to top, rgba(176, 39, 39, 0.54) 0%, rgba(222, 54, 53, 0.54) 100%);
+        text-shadow: 0 1px 1px rgba(1, 1, 1, 0.3);
+        color: #ffffff;
+        font-family: "Helvetica Neue";
+        font-weight: 700;
+        line-height: 26px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
+        .content .main_banner_1_call_text1 {
+          font-size: 34px; }
+        .content .main_banner_1_call_text2 {
+          font-size: 24px; }
+    .content .main_banner_2 {
+      margin-bottom: 20px;
+      position: relative;
+      text-align: center;
+      width: 100%;
+      height: 121px;
+      -webkit-box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
+              box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
+      background-color: #de3635;
+      background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(176, 39, 39, 0.54)), to(rgba(222, 54, 53, 0.54)));
+      background-image: -o-linear-gradient(bottom, rgba(176, 39, 39, 0.54) 0%, rgba(222, 54, 53, 0.54) 100%);
+      background-image: linear-gradient(to top, rgba(176, 39, 39, 0.54) 0%, rgba(222, 54, 53, 0.54) 100%); }
+      .content .main_banner_2 img {
+        position: relative; }
+      .content .main_banner_2_text {
+        width: 100%;
+        position: absolute;
+        top: 20%;
+        text-shadow: 0 1px 2px rgba(16, 16, 15, 0.5);
+        color: #ffffff;
+        font-family: "Bebas Neue Bold";
+        font-size: 42px;
+        font-weight: 400;
+        text-transform: uppercase; }
+
+.content .bgBottom {
+  position: absolute;
+  left: 0;
+  bottom: -1750px;
+  z-index: -1;
+  background-image: url(../assets/img/bgBottom.png);
+  background-repeat: no-repeat;
+  width: 1920px;
+  height: 320px; }
