--- a/blocks/template.pug
+++ b/blocks/template.pug
@@ -20,7 +20,7 @@ html(lang="ru")
                     block header
                         +header()
 
-                    div(class="content")
+                    div(class="content container")
                         block content
 
                 block footer
