--- a/blocks/footer/footer.pug
+++ b/blocks/footer/footer.pug
@@ -1,2 +1,13 @@
 mixin footer()
-    footer(class="footer") footer
+    footer
+        div(class="bgBottom")
+            div(class="footer")
+                div(class="footer_container container")
+                    div(class="footer_container_year") Nakitel ©2014
+
+                    div(class="footer_container_menu")
+                        a(href="#") Контакты
+                        a(href="#") Акции
+                        a(href="#") Каталог
+                        a(href="#") Оплата / Доставка
+                        a(href="#") Гарантия
