--- a/blocks/main.scss
+++ b/blocks/main.scss
@@ -11,3 +11,4 @@
 //***************************************************
 @import "header/header";
 @import "content/content";
+@import "footer/footer";
