--- a/app/css/main.css
+++ b/app/css/main.css
@@ -417,6 +417,7 @@ html, body {
       .content .main_sidebar_item a.active {
         color: #cc0000; }
   .content .main_bg {
+    z-index: 20;
     width: 770px;
     height: 852px;
     background-image: url(../assets/img/mainText.png);
@@ -503,12 +504,43 @@ html, body {
         font-weight: 400;
         text-transform: uppercase; }
 
-.content .bgBottom {
-  position: absolute;
-  left: 0;
-  bottom: -1750px;
-  z-index: -1;
+footer .bgBottom {
+  margin-top: -150px;
+  z-index: 10;
   background-image: url(../assets/img/bgBottom.png);
   background-repeat: no-repeat;
   width: 1920px;
-  height: 320px; }
+  height: 320px;
+  position: relative; }
+
+footer .footer {
+  width: 1920px;
+  height: 44px;
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
+          box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
+  background-color: #db3534;
+  position: absolute;
+  top: 70%; }
+  footer .footer_container {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    footer .footer_container_year {
+      color: #ff6666;
+      font-family: "Helvetica Neue";
+      font-size: 18px;
+      font-weight: 400; }
+    footer .footer_container_menu a {
+      color: #ffffff;
+      font-family: "Helvetica Neue";
+      font-size: 18px;
+      font-weight: 400;
+      cursor: pointer;
+      margin-left: 40px; }
