--- a/blocks/header/header.pug
+++ b/blocks/header/header.pug
@@ -23,11 +23,11 @@ mixin header()
                             | Сумма: 5.000 грн.
 
                     div(class="local")
-                        div.local_item
-                            div.local_item_ru ru
+                        div(class="local_item")
+                            div(class="local_item_ru") ru
 
-                        div.local_item
-                            div.local_item_ua ua
+                        div(class="local_item")
+                            div(class="local_item_ua") ua
 
                     div(class="search")
                         input(type="search" placeholder="Поиск")
