--- a/blocks/header/header.pug
+++ b/blocks/header/header.pug
@@ -6,12 +6,14 @@ mixin header()
                     a(href="#" id="menu" class="icon")
                         img(src="assets/img/menu.png")
 
-                    a(href="#") НА ГЛАВНУЮ
-                    a(href="#") О КОМПАНИИ
-                    a(href="#") КАТАЛОГ ПРОДУКЦИИ
-                    a(href="#") АКЦИИ
-                    a(href="#") ГАРАНТИЯ
-                    a(href="#") КОНТАКТЫ
+                    div(class="menuHide")
+                        div(class="menuHide_container")
+                            a(href="#") НА ГЛАВНУЮ
+                            a(href="#") О КОМПАНИИ
+                            a(href="#") КАТАЛОГ ПРОДУКЦИИ
+                            a(href="#") АКЦИИ
+                            a(href="#") ГАРАНТИЯ
+                            a(href="#") КОНТАКТЫ
 
                 div(class="right_side")
                     div(class="cart")
