fix incorrect path to img

--- a/blocks/header/header.pug
+++ b/blocks/header/header.pug
@@ -33,7 +33,7 @@ mixin header()
 
                     div(class="search")
                         input(type="search" placeholder="Поиск")
-                        input(type="image" src="../assets/img/search.png")
+                        input(type="image" src="assets/img/search.png")
 
         div(class="bgTop")
 
@@ -82,27 +82,27 @@ mixin header()
             div(class="door_panel container")
                 div(class="door")
                     div(class="door_img")
-                        img(src="../assets/img/door1.png")
+                        img(src="assets/img/door1.png")
                     div(class="door_text1") ДВЕРИ
                     div(class="door_text2") ШПОНИРОВАННЫЕ
 
                 div(class="door")
-                    img(src="../assets/img/door2.png")
+                    img(src="assets/img/door2.png")
                     div(class="door_text1") ДВЕРИ
                     div(class="door_text2") ЭКОШПОН
 
                 div(class="door")
-                    img(src="../assets/img/door3.png")
+                    img(src="assets/img/door3.png")
                     div(class="door_text1") ДВЕРИ
                     div(class="door_text2") ИЗ МАССИВА
 
                 div(class="door")
-                    img(src="../assets/img/door4.png")
+                    img(src="assets/img/door4.png")
                     div(class="door_text1") ДВЕРИ
                     div(class="door_text2") ВХОДНЫЕ
 
                 div(class="door")
-                    img(src="../assets/img/door5.png")
+                    img(src="assets/img/door5.png")
                     div(class="door_text1") ДВЕРИ
                     div(class="door_text2") СПЕЦ НАЗНАЧЕНИЯ
 
