--- a/blocks/index.pug
+++ b/blocks/index.pug
@@ -10,19 +10,19 @@ block content
 
         div(class="slideshow-container")
             div(class="mySlides fade")
-                img(src="../assets/img/slider1.png" style="width: 100%")
+                img(src="assets/img/slider1.png" style="width: 100%")
                 div(class="text") Дверь на дачу
 
             div(class="mySlides fade")
-                img(src="../assets/img/slider1.png" style="width: 100%")
+                img(src="assets/img/slider1.png" style="width: 100%")
                 div(class="text") Еще одна дверь
 
             div(class="mySlides fade")
-                img(src="../assets/img/slider1.png" style="width: 100%")
+                img(src="assets/img/slider1.png" style="width: 100%")
                 div(class="text") Супер дверь
 
             div(class="mySlides fade")
-                img(src="../assets/img/slider1.png" style="width: 100%")
+                img(src="assets/img/slider1.png" style="width: 100%")
                 div(class="text") Лучшая дверь
 
     div(class="title") О КОМПАНИИ
