--- a/app/css/main.css
+++ b/app/css/main.css
@@ -53,7 +53,6 @@ html, body {
   src: url("../assets/fonts/BebasNeueBold.ttf"); }
 
 .header .red_line {
-  width: 1920px;
   height: 45px;
   -webkit-box-shadow: 0 5px 5px rgba(16, 16, 15, 0.5);
           box-shadow: 0 5px 5px rgba(16, 16, 15, 0.5);
@@ -196,7 +195,6 @@ html, body {
 .header .bgTop {
   background-image: url(../assets/img/bgTop.png);
   background-repeat: no-repeat;
-  width: 1920px;
   height: 652px; }
   .header .bgTop .logo_panel {
     padding-top: 34px;
@@ -535,12 +533,11 @@ footer .bgBottom {
   z-index: 10;
   background-image: url(../assets/img/bgBottom.png);
   background-repeat: no-repeat;
-  width: 1920px;
   height: 320px;
   position: relative; }
 
 footer .footer {
-  width: 1920px;
+  width: 100%;
   height: 44px;
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
           box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
