--- a/blocks/footer/footer.scss
+++ b/blocks/footer/footer.scss
@@ -7,7 +7,6 @@ footer {
     z-index: 10;
     background-image: url(../assets/img/bgBottom.png);
     background-repeat: no-repeat;
-    width: 1920px;
     height: 320px;
 
     position: relative;
@@ -15,7 +14,7 @@ footer {
 
     .footer{
 
-      width: 1920px;
+      width: 100%;
       height: 44px;
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
       background-color: #db3534;
